--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "homepage": "https://github.com/morishitter/css-z",
   "dependencies": {
-    "css-parse": "^1.7.0"
+    "css-parse": "^1.7.0",
+    "underscore": "^1.6.0"
   },
   "devDependencies": {
     "tap": "^0.4.9",
