--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Analize z-index property in CSS code",
   "main": "index.js",
   "scripts": {
-    "test": "tape test/test.js"
+    "test": "tape test.js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "tap": "^0.4.9",
-    "tape": "^2.12.3"
+    "tape": "^2.12.3",
+    "colored-tape": "^1.0.1"
   }
 }
